test/cgip/PP/error/inheritance/rep/reperr-30.res
Run-Time Error 217: Cannot instantiate an abstract class: E
